[gd_scene load_steps=5 format=3 uid="uid://bbx7eyc7lgxem"]

[ext_resource type="Script" uid="uid://05p1thmor0dh" path="res://scripts/tooltip.gd" id="1_7dicn"]
[ext_resource type="Theme" uid="uid://2vmj5q8dyyau" path="res://button_theme.tres" id="1_75wrl"]
[ext_resource type="Texture2D" uid="uid://bmi72envq2f5w" path="res://assets/tooltip.png" id="3_vy6iq"]

[sub_resource type="Theme" id="Theme_75wrl"]

[node name="Tooltip" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_75wrl")
script = ExtResource("1_7dicn")

[node name="PanelContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 300.0
offset_bottom = 300.0

[node name="TooltipTexture" type="TextureRect" parent="PanelContainer"]
modulate = Color(1, 1, 1, 0.847059)
layout_mode = 2
offset_right = 300.0
offset_bottom = 300.0
theme = SubResource("Theme_75wrl")
texture = ExtResource("3_vy6iq")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
offset_right = 300.0
offset_bottom = 300.0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ItemLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "Item"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.705882, 0.00784314, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 20
text = "Ability
hi
"
horizontal_alignment = 1
autowrap_mode = 2
